updated css so the elements won't get pushed up and down due to typejs changing the text length

--- a/css/style.css
+++ b/css/style.css
@@ -615,6 +615,13 @@ button:focus {
     font-size: 2.5rem;
     margin-bottom: 0.5rem;
   }
+  
+  .home__title--strong__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10rem;
+  }
 
   .majors {
     flex-direction: column;
